# nomenclate-api-python

./: .coveragerc  .env-example  .env.test  .gitignore  .serverless-wsgi  README.md  codecov.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: codeql-analysis.yml  deploy-serverless.yml  python-app.yml  readme-api-sync.yml
docs/spec/json/: nomenclate.json  nomenclate_0.1.0.json
docs/spec/yaml/: nomenclate.yaml  nomenclate_0.1.0.yaml
nomenclate_api/: api.py  api_spec.py  app.py  auth.py  config.py  openapi_plugin.py  schemas.py
nomenclate_api/db/: blacklist.py  mongo.py
nomenclate_api/handlers/: documentation.py  goodbye.py  hello.py  version.py
nomenclate_api/models/: configuration.py  nomenclate.py  organization.py  user.py
nomenclate_api/routes/: auth.py  base.py  configuration.py  default.py  formatted.py  nomenclate.py  profile.py  user.py
nomenclate_api/utils/: nomenclature.py  responses.py  user.py
tests/: base.py  sample_config.py  test_activate.py  test_api.py  test_configuration.py  test_documentation.py  test_formatted.py  test_login.py  test_nomenclate.py  test_nomenclate_api.py  test_profile.py  test_signup.py  test_version.py
