[tool.poetry]
authors = ["Andres Weber <andresmweber@gmail.com>"]
description = "An API for automating and generating strings based on arbitrary user-defined naming conventions"
homepage = "https://nomenclate.andresmweber.com"
keywords = [
  "Poetry",
  "Virtual Environments",
  "Tutorial",
  "Packages",
  "Packaging",
  "nomenclate",
  "naming",
  "automatic",
  "generator",
  "convention",
]
license = "MIT"
name = "nomenclate-api"
readme = "README.md"
repository = "https://github.com/andresmweber/nomenclate-api-python/"
version = "0.1.0"

[tool.poetry.dependencies]
dnspython = "^2.1.0"
python = "^3.8"
python-dotenv = "^0.17.0"
nomenclate = "^2.4.4"
pymongo = "^3.11.3"
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
flask-mongoengine = "^1.0.0"
Flask-JWT-Extended = "^4.1.0"
Bcrypt-Flask = "^1.0.1"
Flask-RESTful = "^0.3.8"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
pytest = "^5.2"
pytest-cov = "^2.11.1"
black = "^21.4b1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
run = "wsgi:main"

[tool.poetry.urls]
issues = "https://github.com/andresmweber/nomenclate-api-python/issues"

[tool.poe.tasks]
deploy = {shell = "sls deploy"}
deploy-domain = {shell = "SLS_DEBUG=* sls create_domain"}
dev = {shell = "sls wsgi serve"}
env = {shell = "sls export-env"}
# shell script based task 
freeze = {shell = "poetry export -f requirements.txt > requirements.txt --without-hashes"}
# python script based task 
mksandwich = {script = "my_package.sandwich:build"}
# simple command based task
test = "pytest --cov tests/"
